<resources>
<string name="app_name">WeatherApp</string>
<string name="montrel">Montreal</string>
<string name="newyork">Newyork</string>
<string name="toronto">Toronto</string>
    <string name="vancouver">Vancouver</string>
    <string name="mumbai">Mumbai</string>
<string name="title_activity_main">Main</string>

<string name="action_settings">Settings</string>

<string name="menu_home">Home</string>

<!-- TODO: Remove or change this placeholder text -->
<string name="hello_blank_fragment">Hello blank fragment</string>
<string name="title_activity_day_weather">DayWeather</string>
</resources>
