<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/loc_montreal"
            android:title="@string/montrel" />
        <item
            android:id="@+id/loc_newyork"
            android:title="@string/newyork" />
        <item
            android:id="@+id/loc_toronto"
            android:title="@string/toronto" />
        <item
            android:id="@+id/loc_vancouver"
            android:title="@string/vancouver" />
        <item
            android:id="@+id/loc_mumbai"
            android:title="@string/mumbai" />

    </group>


</menu>
